Website/style.css
:root{
    --background-color: #030304;
    --second-background-color: #fff;
    --primary-color: #f5a9b8;
    --secondary-color: #5bcefa;
    --accent-color: #fff;
    --topbar-height: 60px;
    box-sizing: border-box;
}

body{
    padding: 0;
    margin: 0;
    height: 100vh;
    background-color: var(--background-color);
    font-family: "Inter", sans-serif;
    overflow-x: hidden;
}

wrapper {
    display: flex;
    flex-flow: column;
    flex-wrap: nowrap;
    height: 100vh;
}

background-placeholder{
    background-color: var(--second-background-color);
    opacity: 1;
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 0 0 5px 0;
    z-index: -1;
}

topbar {
    display: flex;
    align-items: center;
    height: var(--topbar-height);
    background-color: var(--secondary-color);
    z-index: 100;
    box-shadow: 0 0 20px black;
}

titlebox {
    position: relative;
    display: flex;
    margin: 0 0 0 40px;
    height: 100%;
    align-items:center;
    justify-content:center;
}

titlebox span{
    cursor: default;
    font-size: 24pt;
    font-weight: bold;
    background: linear-gradient(150deg, var(--primary-color), var(--accent-color));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-left: 20px;
}

titlebox img {
    height: 100%;
    margin-right: 10px;
    cursor: grab;
}

spacer{
    flex-grow: 1;
}

searchdiv{
    display: block;
    margin: 0 10px 0 0;
}

#searchbox {
    padding: 3px 10px;
    border: 0;
    border-radius: 4px;
    font-size: 14pt;
    width: 250px;
}

#settingscog {
    cursor: pointer;
    margin: 0px 30px;
    height: 50%;
    filter: invert(100%) sepia(0%) saturate(7465%) hue-rotate(115deg) brightness(116%) contrast(101%);
}

viewport {
    position: relative;
    display: flex;
    flex-flow: row;
    flex-wrap: nowrap;
    flex-grow: 1;
    height: 100%;
    overflow-y: scroll;
}

footer {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    width: 100%;
    height: 40px;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
    align-content: center;
}

footer > div {
    height: 100%;
    margin: 0 30px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    cursor: pointer;
}

footer > div > *{
    height: 40%;
    margin: 0 5px;
}

#madeWith {
    flex-grow: 1;
    text-align: right;
    margin-right: 20px;
    cursor: url("media/blahaj.png"), grab;
}

content {
    position: relative;
    flex-grow: 1;
    border-radius: 5px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    align-content: start;
}

#settingsPopup{
    z-index: 10;
}

#settingsPopup popup-content{
    flex-direction: column;
    align-items: start;
    margin: 15px 10px;
}

#settingsPopup popup-content > * {
    margin: 5px 10px;
}

#settingsPopup popup-content .title {
    font-weight: bolder;
}

#addPublication {
    cursor: pointer;
    background-color: var(--secondary-color);
    width: 180px;
    height: 300px;
    border-radius: 5px;
    margin: 10px 10px;
    padding: 15px 20px;
    position: relative;
}

#addPublication p{
    width: 100%;
    text-align: center;
    font-size: 150pt;
    vertical-align: middle;
    line-height: 300px;
    margin: 0;
    color: var(--accent-color);
}

.pill {
    flex-grow: 0;
    height: 14pt;
    font-size: 12pt;
    border-radius: 9pt;
    background-color: var(--primary-color);
    padding: 2pt 17px;
    color: black;
}

publication{
    cursor: pointer;
    background-color: var(--secondary-color);
    width: 180px;
    height: 300px;
    border-radius: 5px;
    margin: 10px 10px;
    padding: 15px 20px;
    position: relative;
}

publication::after{
    content: '';
    position: absolute;
    left: 0; top: 0;
    border-radius: 5px;
    width: 100%; height: 100%;
    background: linear-gradient(rgba(0,0,0,0.8), rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.2));
}

publication-information {
    display: flex;
    flex-direction: column;
    justify-content: start;
}

publication-information * {
    z-index: 1;
    color: var(--accent-color);
}

connector-name{
    width: fit-content;
    margin: 10px 0;
}

publication-name{
    width: fit-content;
    font-size: 16pt;
    font-weight: bold;
}

publication img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 0;
    border-radius: 5px;
}

popup{
    display: none;
    width: 100%;
    min-height: 100%;
    top: 0;
    left: 0;
    position: fixed;
    z-index: 2;
    flex-direction: column;
}


popup popup-window {
    position: absolute;
    z-index: 3;
    left: 25%;
    top: 100px;
    width: 50%;
    display: flex;
    flex-direction: column;
    background-color: var(--second-background-color);
    border-radius: 3px;
    overflow: hidden;
}

popup popup-window popup-title {
    height: 30px;
    font-size: 14pt;
    font-weight: bolder;
    padding: 5px 10px;
    margin: 0;
    display: flex;
    align-items: center;
    background-color: var(--primary-color);
    color: var(--accent-color)
}

popup popup-window popup-content{
    margin: 15px 10px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

popup popup-window popup-content div > * {
    margin: 2px 3px 0 0;
}

popup popup-window popup-content input, select {
    padding: 3px 4px;
    width: 130px;
    border: 1px solid lightgrey;
    background-color: var(--accent-color);
    border-radius: 3px;
}

#selectPublicationPopup publication {
    width: 150px;
    height: 250px;
}

#createTaskPopup {
    z-index: 7;
}

#createTaskPopup input {
    height: 30px;
    width: 200px;
}

#createMonitorTaskPopup, #createDownloadChaptersTask {
    z-index: 9;
}

#createMonitorTaskPopup input[type="number"] {
    width: 40px;
}

#createDownloadChaptersTask popup-content {
    flex-direction: column;
    align-items: start;
}

#createDownloadChaptersTask popup-content > * {
    margin: 3px 0;
}

#createDownloadChaptersTask #chapterOutput {
    max-height: 50vh;
    overflow-y: scroll;
}

#createDownloadChaptersTask #chapterOutput .index{
    display: inline-block;
    width: 25px;
}

#createDownloadChaptersTask #chapterOutput .index::after{
    content: ':';
}

#createDownloadChaptersTask #chapterOutput .vol::before{
    content: 'Vol.';
}

#createDownloadChaptersTask #chapterOutput .vol{
    display: inline-block;
    width: 45px;
}

#createDownloadChaptersTask #chapterOutput .ch::before{
    content: 'Ch.';
}

#createDownloadChaptersTask #chapterOutput .ch {
    display: inline-block;
    width: 60px;
}

#downloadTasksPopup popup-window {
    left: 0;
    top: 80px;
    margin: 0 0 0 10px;
    height: calc(100vh - 140px);
    width: 400px;
    max-width: 95vw;
    overflow-y: scroll;
}

#downloadTasksPopup popup-content {
    flex-direction: column;
    align-items: start;
    margin: 5px;
}

#downloadTasksPopup popup-content > div {
    display: block;
    height: 80px;
    position: relative;
    margin: 5px 0;
}

#downloadTasksPopup popup-content > div > img {
    display: block;
    position: absolute;
    height: 100%;
    width: 60px;
    left: 0;
    top: 0;
    object-fit: cover;
    border-radius: 4px;
}

#downloadTasksPopup popup-content > div > span {
    display: block;
    position: absolute;
    width: max-content;
}

#downloadTasksPopup popup-content > div > .pubTitle {
    left: 70px;
    top: 0;
}

#downloadTasksPopup popup-content > div > .chapterName {
    left: 70px;
    top: 28pt;
}

#downloadTasksPopup popup-content > div > .chapterNumber {
    left: 70px;
    top: 14pt;
}

#downloadTasksPopup popup-content > div > progress {
    display: block;
    position: absolute;
    left: 150px;
    bottom: 0;
    width: 200px;
}

#downloadTasksPopup popup-content > div > .progressStr {
    display: block;
    position: absolute;
    left: 70px;
    bottom: 0;
    width: 70px;
}

blur-background {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    background-color: black;
    opacity: 0.5;
}

#taskSelectOutput{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    align-content: start;
}

#publicationViewerPopup{
    z-index: 5;
}

publication-viewer{
    display: block;
    width: 450px;
    position: absolute;
    top: 200px;
    left: 400px;
    background-color: var(--accent-color);
    border-radius: 5px;
    overflow: hidden;
    padding: 15px;
}

publication-viewer::after{
    content: '';
    position: absolute;
    left: 0; top: 0;
    border-radius: 5px;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.8);
    backdrop-filter: blur(3px);
}

publication-viewer img {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
    border-radius: 5px;
    z-index: 0;
}

publication-viewer publication-information > * {
    margin: 5px 0;
}

publication-viewer publication-information publication-name {
    width: initial;
    overflow-x: scroll;
    white-space: nowrap;
    scrollbar-width: none;
}

publication-viewer publication-information publication-tags::before {
    content: "Tags";
    display: block;
    font-weight: bolder;
}

publication-viewer publication-information publication-tags {
    overflow-x: scroll;
    white-space: nowrap;
    scrollbar-width: none;
}

publication-viewer publication-information publication-author::before {
    content: "Author: ";
    font-weight: bolder;
}

publication-viewer publication-information publication-description::before {
    content: "Description";
    display: block;
    font-weight: bolder;
}

publication-viewer publication-information publication-description {
    font-size: 12pt;
    margin: 5px 0;
    height: 145px;
    overflow-x: scroll;
}

publication-viewer publication-information publication-interactions {
    display: flex;
    flex-direction: row;
    justify-content: end;
    align-items: start;
    width: 100%;
}

publication-viewer publication-information publication-interactions > * {
    margin: 0 10px;
    font-size: 16pt;
    cursor: pointer;
}

publication-viewer publication-information publication-interactions publication-starttask {
    color: var(--secondary-color);
}

publication-viewer publication-information publication-interactions publication-delete {
    color: red;
}

publication-viewer publication-information publication-interactions publication-add {
    color: limegreen;
}

footer-tag-popup {
    display: none;
    padding: 2px 4px;
    position: fixed;
    bottom: 58px;
    left: 20px;
    background-color: var(--second-background-color);
    z-index: 8;
    border-radius: 5px;
    max-height: 400px;
}

footer-tag-content{
    position: relative;
    max-height: 400px;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    overflow-y: scroll;
}

footer-tag-content > * {
    margin: 2px 5px;
}

footer-tag-popup::before{
    content: "";
    width: 0;
    height: 0;
    position: absolute;
    border-right: 10px solid var(--second-background-color);
    border-left: 10px solid transparent;
    border-top: 10px solid var(--second-background-color);
    border-bottom: 10px solid transparent;
    left: 0;
    bottom: -17px;
    border-radius: 0 0 0 5px;
}

